--- a/etc/rpi-swap/swap.conf
+++ b/etc/rpi-swap/swap.conf
@@ -1,5 +1,10 @@
-DphysSwapfile {
-  SwapFactor "1";  # Target swap-size as 100% system memory
-  MaxSwap "2048";  # Limit size to 2GiB
-  MaxDiskPct "50"; # Limit to 50% available disk space
+RpiSwap {
+  Mechanism "swapfile";
+
+  Swapfile {
+    #Path "/var/swap";
+    SwapFactor "1";  # Target swap-size as 100% system memory
+    MaxSwap "2048";  # Limit size to 2GiB
+    MaxDiskPct "50"; # Limit to 50% available disk space
+  };
 };
