--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Description: creates by-backingfile symlinks when loop devices are set up
 # A temporary package just for experimentation purposes
 Package: rpi-resize-var-swap-service
 Architecture: all
+Depends: rpi-symlink-loop-devices
 Provides: dphys-swapfile
 Conflicts: dphys-swapfile
 Replaces: dphys-swapfile
