--- a/etc/rpi/swap.conf
+++ b/etc/rpi/swap.conf
@@ -1,52 +1,17 @@
+#  This file is part of rpi-swap.
 #
-# Raspberry Pi Swap Configuration File
+#  Defaults are provided as commented-out options. Local configuration
+#  should be created by either modifying this file, or by creating "drop-ins" in
+#  the swap.conf.d/ subdirectory. The latter is generally recommended.
 #
-# This file configures Raspberry Pi swap management.
-#
-# Default values are provided as commented-out options.
-# Uncomment and modify any settings you wish to change.
-#
-# Changes to this file take effect at boot time.
-#
+#  See swap.conf(5) for details.
 
 [RpiSwap]
-# Controls which swap mechanism to use.
-# Possible values:
-#Mechanism=auto      # Automatically select best mechanism (default)
-#Mechanism=swapfile  # Traditional swap file on disk
-#Mechanism=zram      # RAM-based compressed swap
-#Mechanism=zram+file # RAM-based compressed swap with backing file on disk
-                     # (Uses the file specified in Swapfile::Path
-                     #  as backing store via a loop device)
-
-# Note: For mechanisms that don't involve a file (e.g. "zram"),
-# all [Swapfile] settings are disregarded, and any existing
-# swap file will be removed to free up disk space.
+#Mechanism=auto
 
 [Swapfile]
-# Path to the swap file. Used directly by swapfile mechanism,
-# and as backing store via loop device for zram+file mechanism.
 #Path=/var/swap
-
-#
-# Swap size calculation parameters
-# The final size will be the minimum of these constraints.
-#
-
-# Target swap size as factor of system memory
-# Example: "1" means 1x the system RAM
 #SwapFactor=1
-
-# Maximum swap size in MiB
-# Set to limit the maximum swap regardless of RAM size
-# Set to "" (empty string) to disable this limit altogether
 #MaxSwap=2048
-
-# Maximum percentage of available disk space to use for swap
-# Set to prevent swap from consuming too much disk space
 #MaxDiskPct=50
-
-# Explicit swap size in MiB
-# If set, this overrides SwapFactor calculation
-# Uncomment and set to specify an exact size
-#SwapSize=512
+#SwapSize=
