Implement writeback & additional man pages

--- a/etc/rpi/swap.conf
+++ b/etc/rpi/swap.conf
@@ -15,3 +15,9 @@
 #MaxSwap=2048
 #MaxDiskPct=50
 #SwapSize=
+
+[ZramWriteback]
+#Trigger=auto
+# Timer trigger settings:
+#InitialDelay=180min
+#PeriodicInterval=24h
