Rename [SwapFile] variables under [File]

--- a/etc/rpi/swap.conf
+++ b/etc/rpi/swap.conf
@@ -9,12 +9,12 @@
 [Main]
 #Mechanism=auto
 
-[Swapfile]
+[File]
 #Path=/var/swap
-#SwapFactor=1
-#MaxSwap=2048
-#MaxDiskPct=50
-#SwapSize=
+#RamMultiplier=1
+#MaxSizeMiB=2048
+#MaxDiskPercent=50
+#FixedSizeMiB=
 
 [ZramWriteback]
 #Trigger=auto
