Move '[ZramWriteback]' config to '[Zram]'

--- a/etc/rpi/swap.conf
+++ b/etc/rpi/swap.conf
@@ -16,8 +16,8 @@
 #MaxDiskPercent=50
 #FixedSizeMiB=
 
-[ZramWriteback]
-#Trigger=auto
-# Timer trigger settings:
-#InitialDelay=180min
-#PeriodicInterval=24h
+[Zram]
+# Writeback settings (for zram+file mechanism):
+#WritebackTrigger=auto
+#WritebackInitialDelay=180min
+#WritebackPeriodicInterval=24h
