Allow [Zram] size to be specified

--- a/etc/rpi/swap.conf
+++ b/etc/rpi/swap.conf
@@ -17,6 +17,9 @@
 #FixedSizeMiB=
 
 [Zram]
+#RamMultiplier=1
+#MaxSizeMiB=2048
+#FixedSizeMiB=
 # Writeback settings (for zram+file mechanism):
 #WritebackTrigger=auto
 #WritebackInitialDelay=180min
