--- a/lib/systemd/system/rpi-setup-loop@.service
+++ b/lib/systemd/system/rpi-setup-loop@.service
@@ -7,5 +7,6 @@ After=sysinit.target
 [Service]
 Type=oneshot
 ExecStart=/sbin/losetup -f /%I
+ExecStart=/usr/lib/rpi-loop-utils/bin/rpi-wait-backingfile-symlink %i
 ExecStop=/sbin/losetup -d /dev/disk/by-backingfile/%i
 RemainAfterExit=yes
