rpi-setup-loop: Use DefaultDependencies
rpi-setup-loop@.service should keep DefaultDependencies by default
as it will usually be started by a user or another service after
boot complete. Users of rpi-setup-loop@.service in early boot can
disable DefaultDependencies via drop-in configuration.

Additionally, move symlink verification to ExecStartPost to allow
users to configure additional ExecStart= steps via drop-in.

--- a/lib/systemd/system/rpi-setup-loop@.service
+++ b/lib/systemd/system/rpi-setup-loop@.service
@@ -1,12 +1,9 @@
 [Unit]
 Description=rpi-setup-loop - set up file on loop device
-DefaultDependencies=no
-Requires=sysinit.target
-After=sysinit.target
 
 [Service]
 Type=oneshot
-ExecStart=/sbin/losetup -f /%I
-ExecStart=/usr/lib/rpi-loop-utils/bin/rpi-wait-backingfile-symlink %i
+ExecStart=/sbin/losetup --nooverlap --find /%I
+ExecStartPost=/usr/lib/rpi-loop-utils/bin/rpi-wait-backingfile-symlink %i
 ExecStop=/sbin/losetup -d /dev/disk/by-backingfile/%i
 RemainAfterExit=yes
