feat: Add support for native swap partitions and zram device-backed writeback
- Implement swapdev mechanism to activate existing block devices as swap
- Add zram+device mechanism for zram writeback to block devices
- Auto mode now detects swap partitions and prefers device-backed writeback
- Update rpi-desired-swap-size to skip file logic for block devices
- Update rpi-resize-swap-file to no-op on block devices
- Add validation to ensure device-backed mechanisms point to block devices
- Document new mechanisms and Path semantics in swap.conf.5
- Update rpi-swap-generator.8 to mention partition and device support
- Add configuration examples for swapdev and zram+device usage
- Note that swap partition creation is a manual user responsibility

--- a/etc/rpi/swap.conf
+++ b/etc/rpi/swap.conf
@@ -8,9 +8,11 @@
 
 [Main]
 #Mechanism=auto
+# Supported: auto, swapfile, swapdev, zram, zram+file, zram+device, none
 
 [File]
 #Path=/var/swap
+# For swapdev or zram+device, set Path to the block device (e.g. /dev/mmcblk0p3)
 #RamMultiplier=1
 #MaxSizeMiB=2048
 #MaxDiskPercent=50
